fixed tracks not showing correct

--- a/src/Components/Grid/Grid.css
+++ b/src/Components/Grid/Grid.css
@@ -1,6 +1,6 @@
 .Grid {
   display: grid;
-  grid: repeat(auto-fit, minmax(max-content, 20%)) / repeat(auto-fit, minmax(50%, max-content));
+  grid: repeat(auto-fit, minmax(max-content, 20%)) / repeat(auto-fit, minmax(50%, auto));
   height: auto;
   width: 100%;
   padding: 5%;
